syntax = "proto3";
package common;

option go_package = "github.com/veraison/common";


import "google/protobuf/struct.proto";
import "attestation_format.proto";
import "attestation.proto";
import "token.proto";


message Status {
    bool result = 1;
    string error_detail = 2;
}

message Evidence {
    google.protobuf.Struct value = 1;
}

message AddSwComponentsRequest {
    repeated Endorsement sw_components = 1;
}

message AddSwComponentsResponse {
    Status status = 1;
}

enum EndorsementType {
    UNSET = 0;
    REFERENCE_VALUE = 1;
    VERIFICATION_KEY = 2;
}

message Endorsement {
    AttestationFormat scheme = 1;
    EndorsementType type = 2;
    google.protobuf.Struct attributes = 3;
}

message AddTrustAnchorRequest {
    Endorsement trust_anchor = 1;
}

message AddTrustAnchorResponse {
    Status status = 1;
}

// Client interface for the Veraison Trusted Services component.
service VTS {
    // Returns attestation information -- evidences, endorsed claims, trust
    // vector, etc -- for the provided attestation token data.
    rpc GetAttestation(AttestationToken) returns (Attestation);

    // Service endpoints that are used to store Software Components
    // and Trust Anchors to the endorsement store
    rpc AddSwComponents(AddSwComponentsRequest) returns (AddSwComponentsResponse);
    rpc AddTrustAnchor(AddTrustAnchorRequest) returns (AddTrustAnchorResponse);
}

